# APT-Vendin-Machine

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
code/: Coin.cpp  Coin.h  Food.cpp  Food.h  Helper.cpp  Helper.h  Interface.cpp  Interface.h  LinkedList.cpp  LinkedList.h  MainLinkedList.cpp  MainLinkedList.h  Node.cpp  Node.h  ftt.cpp
indi_code/: Command.cpp  Command.h  EnhancedLinkedList.cpp  EnhancedLinkedList.h  EnhancedNode.cpp  EnhancedNode.h  Food.cpp  Food.h  Helper.cpp  Helper.h  InnerLinkedList.cpp  InnerLinkedList.h  Interface.cpp  Interface.h  Menu.cpp  Menu.h  ftt.cpp
tests/addFoodTest/: addFood.actual_output  addFood.expected_output  addFood.input
tests/displayMenuTest/: displayMenu.actual_output  displayMenu.expected_output
tests/end2EndTest/: end2End.actual_output  end2End.expected_output
tests/helpTest/: help.actual_output  help.expected_output  help.input
tests/incorrectCashTest/: incorrectCash.actual_output  incorrectCash.expected_output
tests/incorrectDescTest/: incorrectDesc.actual_output  incorrectDesc.expected_output  incorrectDesc.input
tests/incorrectPriceTest/: incorrectPrice.actual_output  incorrectPrice.expected_output
tests/purchaseFoodTest/: purchaseFood.actual_output  purchaseFood.expected_output
tests/save&ExitTest/: save&Exit.actual_output  save&Exit.expected_output  save&Exit.input
tests/saveExitTest/: saveExit.actual_output  saveExit.expected_output
tests/updateBalanceTest/: updateBalance.actual_output  updateBalance.expected_output
tests/viewBalanceTest/: viewBalance.actual_output  (+1 more)
